--- a/FASE_2/Sesion08/package.json
+++ b/FASE_2/Sesion08/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sesion06",
+  "name": "sesion08",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,14 +17,12 @@
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
     "passport": "^0.6.0",
-    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.23.1",
-    "sqlite3": "^5.1.1",
-    "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0"
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.23.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.5.1"
+    "sqlite3": "^5.1.2"
   }
 }
